# MiniProjet_CSC4526

./: .gitignore  CMakeLists.txt  README.md
mainLauncher/: CMakeLists.txt
resources/: shader.frag
src/: Baby.cpp  Baby.h  CMakeLists.txt  EventManager.h  Game.cpp  Game.h  Interactible.cpp  Interactible.h  LightFish.cpp  LightFish.h  Shark.cpp  Shark.h  Timer.cpp  Timer.h  Utils.cpp  Utils.h  airBubbles.cpp  airBubbles.h  myMain.cpp  myMain.h
unitTests/: CMakeLists.txt  unitTests.cpp
